fixed scrolling on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -160,3 +160,16 @@ input[type='number'] {
   -moz-appearance: textfield;
   appearance: textfield;
 }
+
+.whiskey-table-container {
+  overflow-x: auto;
+  width: 100vw;
+  max-width: 100vw;
+  margin: 0 -2rem 2rem -2rem;
+  padding: 0;
+}
+
+.whiskey-table-container table {
+  min-width: 900px;
+  width: max-content;
+}
